# selfies-psmiles

./: CHANGELOG.md  README.md  pyproject.tomi  pyproject.toml  setup.py
original_code_from_paper/: bitflips_in_paper_Fig3.txt
selfies_psmiles/: __init__.py  bond_constraints.py  encoder.py  grammar_rules.py  mol_graph.py
selfies_psmiles/utils/: smiles_utils.py
