[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "selfies-psmiles"
version = "0.1.1"
description = "Unofficial, upstream-compatible extension of SELFIES with PSMILES '*' endpoints."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [{ name = "KikETs" }]
dependencies = ["selfies>=2.2.0"]

[project.urls]
Homepage = "https://github.com/KikETs/selfies-psmiles"
Issues   = "https://github.com/KikETs/selfies-psmiles/issues"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*","docs*","examples*","original_code_from_paper*"]
